selfhost/test/parser/match_error_destructuring_case_empty_args.out
Error at %FILE_NAME%:2:14
Unexpected token ')', expected 'identifier':
  |    Color.Blue() => 0x0000FF
                  ^