selfhost/test/parser/match_error_destructuring_case_empty_args.abra
val x = match foo() {
  Color.Blue() => 0x0000FF
  _ => 0
}
